syntax = "proto3";

package db;

import "user.proto";

option go_package = "github.com/demola234/payzone/pb";

message UpdateUserRequest {
    string username = 1;
    optional string email = 2;
    string full_name = 3;
    string password = 4;
}

message UpdateUserResponse {
    User user = 1;
}