syntax = "proto3";

package db;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/demola234/payzone/pb";

message User {
    string username = 1;
    string email = 2;
    string full_name = 3;
    google.protobuf.timestamp password_changed_at = 4;
    google.protobuf.timestamptz created_at = 5;
}